feat: Enhance OpenAPI support with detailed annotations and models for improved API documentation